--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             margin-top: 20px;
             margin-left: 20px;
             background-color: #3f4652;
-            transition: 0.3s;       
+            transition: 0.3s; 
+            border-radius: 5px;
         }
 
         .row {
